JANALYSE-SSH

TODO : 
  => cleanup & scaladoc !!!
  => Add tests with a remote host, in addition to localhost
  => "ls --format=single-column" may to be replaced by "ls | cat"
  => Check if "date '+%y%m%d_%H%M%S'" is supported on all *nix
  => Shell.date -> take into account remote system time zone

CAVEATS : 
  => ssh persisted shell session operations must be executed within the same thread, 
     do not span a persisted shell session across several threads => it may generate exception 
     So be careful when using REPL, as each "evaluation" is done with a new thread ! 

------------------------------------------------------------------
0.8.1 INPG
 - now using sbt-assembly 0.8.1
 - now using scalatest 0.8
 - SSHCommand, SSHBatch methods ! renamed to §§
 - new helper methods :
   test, exists, isFile, isDirectory, isExecutable 

------------------------------------------------------------------
0.8.0
 - now using sbt 0.11.3
 - now using sbteclipse 2.1.0-RC1
 - Set of new method to help with commons remote commands :
   fileSize, md5sum, sha1sum, uname, ls, pwd, cd(*), hostname, date, findAfterDate
   (*) of course only for shell sessions 
 - JSCH updated to 0.1.48
 - md5sum method added to SSHTools object
 - manage well connect timeout (default = 30s) and general socket timeout (default = 5mn)

------------------------------------------------------------------
0.7.4 
 - SSHPassword toString method added (return the password)
 - updated for scala 2.9.2 support
 - scalatest 1.7.2
 - no more support for scala 2.8.1 & 2.8.2


------------------------------------------------------------------
0.7.3
 - JCSH updated to release 0.1.47
 - SSHOptions now contains an extra field "name" which allow user to friendly identify a remote ssh system
 - SSHOptions password type is now of SSHPassword type instead of String.
   Implicit conversions is provided from String, Option[String]
 - SSHShell batch method renamed to execute

